--- a/plugin.yml
+++ b/plugin.yml
@@ -1,4 +1,4 @@
-name: StopWitherSpawns
+name: WitherManagement
 author: MistPhizzle
 version: 1.0
 main: com.mistphizzle.stopwitherspawns.StopWitherSpawns
